; ModuleID = '/home/carl/AnghaBench/8cc/extr_lex.c_lex_init.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_lex.c_lex_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buffers = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"-\00", align 1
@stdin = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"Cannot open %s: %s\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lex_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @buffers, align 4
  %5 = call i32 (...) @make_vector()
  %6 = call i32 @vec_push(i32 %4, i32 %5)
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @strcmp(i8* %7, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %14, label %10

10:                                               ; preds = %1
  %11 = load i32*, i32** @stdin, align 8
  %12 = call i32 @make_file(i32* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %13 = call i32 @stream_push(i32 %12)
  br label %29

14:                                               ; preds = %1
  %15 = load i8*, i8** %2, align 8
  %16 = call i32* @fopen(i8* %15, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %16, i32** %3, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %24, label %19

19:                                               ; preds = %14
  %20 = load i8*, i8** %2, align 8
  %21 = load i32, i32* @errno, align 4
  %22 = call i8* @strerror(i32 %21)
  %23 = call i32 @error(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i8* %20, i8* %22)
  br label %24

24:                                               ; preds = %19, %14
  %25 = load i32*, i32** %3, align 8
  %26 = load i8*, i8** %2, align 8
  %27 = call i32 @make_file(i32* %25, i8* %26)
  %28 = call i32 @stream_push(i32 %27)
  br label %29

29:                                               ; preds = %24, %10
  ret void
}

declare dso_local i32 @vec_push(i32, i32) #1

declare dso_local i32 @make_vector(...) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @stream_push(i32) #1

declare dso_local i32 @make_file(i32*, i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @error(i8*, i8*, i8*) #1

declare dso_local i8* @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
